--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "author": "mendlik <mendelski.pawel@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-latest": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "html-webpack-plugin": "^2.24.1",
     "webpack": "^1.14.0"
   }
 }
