--- a/package.json
+++ b/package.json
@@ -4,14 +4,41 @@
   "main": "index.js",
   "author": "mendlik <mendelski.pawel@gmail.com>",
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
+    "autoprefixer": "^6.5.4",
     "babel-cli": "^6.18.0",
+    "babel-core": "^6.21.0",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.26.1",
+    "eslint": "^3.12.2",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "2.2.3",
+    "eslint-plugin-react": "^6.8.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.24.1",
+    "inline-manifest-webpack-plugin": "^3.0.1",
+    "node-sass": "^4.1.1",
+    "optimist": "^0.6.1",
+    "precss": "^1.4.0",
+    "resolve-url-loader": "^1.6.1",
+    "sass-loader": "^4.1.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.14.0",
+    "webpack-chunk-hash": "^0.3.0",
     "webpack-dev-server": "^1.16.2"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.20.0",
+    "lodash": "^4.17.2"
   }
 }
