--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sample-spa",
+  "name": "webapck-starter",
   "version": "1.0.0",
   "main": "index.js",
   "author": "mendlik <mendelski.pawel@gmail.com>",
