Update to webpack 3.8

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@ parser: babel-eslint
 env:
   node: true
   browser: true
+  jest: true
 plugins: [react, import]
 settings:
   import/parser: babel-eslint
@@ -10,8 +11,3 @@ settings:
     moduleDirectory: [node_modules, src]
 rules:
   comma-dangle: [error, never]
-  no-unused-expressions: [0]
-  import/no-named-as-default: error
-  jsx-a11y/anchor-has-content: 0
-  react/jsx-filename-extension: [1, { "extensions": [".js", ".jsx"] }]
-  no-prototype-builtins: 0
