--- a/package.json
+++ b/package.json
@@ -1,55 +1,65 @@
 {
-  "name": "webapck-starter",
+  "name": "webpack-starter",
   "version": "1.0.0",
   "main": "index.js",
   "author": "mendlik <mendelski.pawel@gmail.com>",
+  "repository": "https://github.com/mendlik/webpack-starter",
   "license": "MIT",
+  "private": true,
   "scripts": {
-    "watch": "webpack-dev-server --inline --hot --mode watch --config ./webpack-config.babel.js",
-    "start": "webpack-dev-server --watch --config ./webpack-config.babel.js",
-    "build": "webpack --progress --config ./webpack-config.babel.js",
-    "build-debug": "npm run build -- --mode debug",
-    "ci": "npm run lint && npm run test && npm run build",
-    "test": "echo 'No tests to run'",
+    "test:file": "jest $*",
+    "test:unit": "jest ./test/**/*.unit.spec.js",
+    "test:ui": "jest ./test/**/*.ui.spec.js",
+    "test:ui:update": "jest --updateSnapshot ./test/**/*.ui.spec.js",
+    "test": "jest ./test/**/*.spec.js",
+    "clean": "rimraf ./build",
     "lint": "eslint --max-warnings 0 --cache .",
-    "clean": "rimraf ./build"
+    "build": "webpack --progress --config ./webpack-config.babel.js",
+    "ci": "run-s clean lint test build",
+    "build:debug": "npm run build -- --env.mode debug",
+    "build:watch": "npm run build -- --watch --env.mode debug",
+    "serve": "http-server ./build",
+    "livereload": "livereload ./build",
+    "watch": "webpack-dev-server --inline --hot --watch --port 9090 --config ./webpack-config.babel.js --env.mode watchHot",
+    "watch:reload": "webpack-dev-server --watch --config --port 9090 ./webpack-config.babel.js --env.mode watchReload",
+    "watch:livereload": "run-p livereload serve build:watch"
   },
   "devDependencies": {
-    "autoprefixer": "^6.5.4",
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.21.0",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-latest": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.1",
-    "eslint": "^3.12.2",
-    "eslint-config-airbnb": "^13.0.0",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "2.2.3",
-    "eslint-plugin-react": "^6.8.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.24.1",
+    "autoprefixer": "^7.1.6",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.1",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-runtime": "^6.26.0",
+    "copy-webpack-plugin": "^4.2.0",
+    "css-loader": "^0.28.7",
+    "eslint": "^4.10.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-react": "^7.4.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
+    "html-webpack-plugin": "^2.30.1",
+    "http-server": "^0.10.0",
     "inline-manifest-webpack-plugin": "^3.0.1",
-    "node-sass": "^4.1.1",
-    "optimist": "^0.6.1",
-    "precss": "^1.4.0",
-    "resolve-url-loader": "^1.6.1",
-    "rimraf": "^2.5.4",
-    "sass-loader": "^4.1.0",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.14.0",
-    "webpack-chunk-hash": "^0.3.0",
-    "webpack-dev-server": "^1.16.2"
-  },
-  "dependencies": {
-    "babel-runtime": "^6.20.0",
-    "lodash": "^4.17.2"
+    "jest": "^21.2.1",
+    "livereload": "^0.6.3",
+    "lodash": "^4.17.4",
+    "node-sass": "^4.5.3",
+    "npm-run-all": "^4.1.1",
+    "precss": "^2.0.0",
+    "postcss-loader": "^2.0.8",
+    "resolve-url-loader": "^2.2.0",
+    "rimraf": "^2.6.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.8.1",
+    "webpack-chunk-hash": "^0.5.0",
+    "webpack-dev-server": "^2.9.4"
   }
 }
