--- a/webpack-starter-react-spa/package.json
+++ b/webpack-starter-react-spa/package.json
@@ -14,7 +14,7 @@
     "test": "jest ./test/**/*.spec.js",
     "clean": "rimraf ./build",
     "lint": "eslint --max-warnings 0 --cache .",
-    "favicons": "babel-node ./lib/favicons",
+    "favicons": "favico --config ./src/theme/favicons/config.json",
     "build": "webpack --progress --config ./webpack.babel.js",
     "ci": "run-s clean lint test build",
     "build:debug": "npm run build -- --env.mode debug",
@@ -33,6 +33,7 @@
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
@@ -45,6 +46,7 @@
     "eslint-plugin-jsx-a11y": "6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "favico": "^1.2.2",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "http-server": "^0.10.0",
@@ -56,6 +58,8 @@
     "npm-run-all": "^4.1.1",
     "postcss-loader": "^2.0.8",
     "precss": "^2.0.0",
+    "react-hot-loader": "^3.1.1",
+    "react-test-renderer": "^16.0.0",
     "resolve-url-loader": "^2.2.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
@@ -66,11 +70,7 @@
     "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
-    "babel-preset-react": "^6.24.1",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-hot-loader": "^3.1.1",
-    "react-test-renderer": "^16.0.0",
-    "rfg-api": "^0.3.0"
+    "react-dom": "^16.0.0"
   }
 }
