--- a/webpack-starter-vanilla-spa/package.json
+++ b/webpack-starter-vanilla-spa/package.json
@@ -31,13 +31,10 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-runtime": "^6.26.0",
     "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
-    "enzyme": "^3.1.0",
-    "enzyme-adapter-react-16": "^1.0.3",
     "eslint": "^4.10.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-loader": "^1.9.0",
@@ -45,32 +42,29 @@
     "eslint-plugin-jsx-a11y": "6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "favico": "^1.2.2",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "http-server": "^0.10.0",
     "inline-manifest-webpack-plugin": "^3.0.1",
     "jest": "^21.2.1",
+    "jsdom": "^11.3.0",
     "livereload": "^0.6.3",
     "lodash": "^4.17.4",
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.1.1",
     "postcss-loader": "^2.0.8",
-    "precss": "^2.0.0",
     "resolve-url-loader": "^2.2.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
+    "uglifyjs-webpack-plugin": "^1.0.1",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
     "webpack-chunk-hash": "^0.5.0",
     "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
-    "babel-preset-react": "^6.24.1",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-hot-loader": "^3.1.1",
-    "react-test-renderer": "^16.0.0",
-    "rfg-api": "^0.3.0"
+    "babel-polyfill": "^6.26.0"
   }
 }
