--- a/webpack-starter-bootstrap/package.json
+++ b/webpack-starter-bootstrap/package.json
@@ -66,6 +66,10 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "precss": "^2.0.0"
+    "bootstrap": "^4.0.0-beta.2",
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.6",
+    "precss": "^2.0.0",
+    "raw-loader": "^0.5.1"
   }
 }
