--- a/webpack-starter-bootstrap/package.json
+++ b/webpack-starter-bootstrap/package.json
@@ -11,16 +11,18 @@
     "test:unit": "jest ./test/**/*.unit.spec.js",
     "test:ui": "jest ./test/**/*.ui.spec.js",
     "test:ui:update": "jest --updateSnapshot ./test/**/*.ui.spec.js",
+    "test:coverage": "jest --coverage ./test/**/*.spec.js",
+    "test:ci": "jest --ci --coverage ./test/**/*.spec.js",
     "test": "jest ./test/**/*.spec.js",
     "clean": "rimraf ./build",
-    "lint": "eslint --max-warnings 0 --cache .",
+    "lint": "eslint --max-warnings 0 --cache --cache-location ./.cache/eslint/eslintcache .",
     "favicons": "babel-node ./lib/favicons",
     "build": "webpack --progress --config ./webpack.babel.js",
-    "ci": "run-s clean lint test build",
+    "ci": "run-s clean lint test:ci build",
     "build:debug": "npm run build -- --env.mode debug",
     "build:watch": "npm run build -- --watch --env.mode debug",
-    "serve": "http-server ./build",
-    "livereload": "livereload ./build",
+    "serve": "http-server -p 9090 ./build/dist",
+    "livereload": "livereload ./build/dist",
     "watch": "webpack-dev-server --inline --hot --watch --port 9090 --config ./webpack.babel.js --env.mode watchHot",
     "watch:reload": "webpack-dev-server --watch --config --port 9090 ./webpack.babel.js --env.mode watchReload",
     "watch:livereload": "run-p livereload serve build:watch"
@@ -41,11 +43,13 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "6.0.2",
     "eslint-plugin-react": "^7.4.0",
+    "exports-loader": "^0.6.4",
     "extract-text-webpack-plugin": "^3.0.2",
     "favico": "^1.2.2",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "http-server": "^0.10.0",
+    "identity-obj-proxy": "^3.0.0",
     "inline-manifest-webpack-plugin": "^3.0.1",
     "jest": "^21.2.1",
     "jsdom": "^11.3.0",
@@ -54,6 +58,7 @@
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.1.1",
     "postcss-loader": "^2.0.8",
+    "raw-loader": "^0.5.1",
     "resolve-url-loader": "^2.2.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
@@ -68,8 +73,6 @@
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.0.0-beta.2",
     "jquery": "^3.2.1",
-    "popper.js": "^1.12.6",
-    "precss": "^2.0.0",
-    "raw-loader": "^0.5.1"
+    "popper.js": "^1.12.6"
   }
 }
