--- a/webpack-starter-vanilla-spa/package.json
+++ b/webpack-starter-vanilla-spa/package.json
@@ -11,16 +11,18 @@
     "test:unit": "jest ./test/**/*.unit.spec.js",
     "test:ui": "jest ./test/**/*.ui.spec.js",
     "test:ui:update": "jest --updateSnapshot ./test/**/*.ui.spec.js",
+    "test:coverage": "jest --coverage ./test/**/*.spec.js",
+    "test:ci": "jest --ci --coverage ./test/**/*.spec.js",
     "test": "jest ./test/**/*.spec.js",
     "clean": "rimraf ./build",
-    "lint": "eslint --max-warnings 0 --cache .",
+    "lint": "eslint --max-warnings 0 --cache --cache-location ./.cache/eslint/eslintcache .",
     "favicons": "babel-node ./lib/favicons",
     "build": "webpack --progress --config ./webpack.babel.js",
-    "ci": "run-s clean lint test build",
+    "ci": "run-s clean lint test:ci build",
     "build:debug": "npm run build -- --env.mode debug",
     "build:watch": "npm run build -- --watch --env.mode debug",
-    "serve": "http-server ./build",
-    "livereload": "livereload ./build",
+    "serve": "http-server -p 9090 ./build/dist",
+    "livereload": "livereload ./build/dist",
     "watch": "webpack-dev-server --inline --hot --watch --port 9090 --config ./webpack.babel.js --env.mode watchHot",
     "watch:reload": "webpack-dev-server --watch --config --port 9090 ./webpack.babel.js --env.mode watchReload",
     "watch:livereload": "run-p livereload serve build:watch"
@@ -46,6 +48,7 @@
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "http-server": "^0.10.0",
+    "identity-obj-proxy": "^3.0.0",
     "inline-manifest-webpack-plugin": "^3.0.1",
     "jest": "^21.2.1",
     "jsdom": "^11.3.0",
@@ -65,7 +68,6 @@
     "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "precss": "^2.0.0"
+    "babel-polyfill": "^6.26.0"
   }
 }
