--- a/webpack-starter-react-spa/package.json
+++ b/webpack-starter-react-spa/package.json
@@ -36,6 +36,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.26.0",
+    "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
     "enzyme": "^3.1.0",
@@ -68,7 +69,6 @@
     "uglifyjs-webpack-plugin": "^1.0.1",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
-    "webpack-chunk-hash": "^0.5.0",
     "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
